--- a/SellreMarket/pom.xml
+++ b/SellreMarket/pom.xml
@@ -123,7 +123,24 @@
 		    <version>1.6.2</version>
 		</dependency>
 		
-
+		<!-- ajax 사용 위해 -->
+		<dependency>
+		    <groupId>net.sf.json-lib</groupId>
+		    <artifactId>json-lib</artifactId>
+		    <classifier>jdk15</classifier>
+		    <version>2.4</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.codehaus.jackson</groupId>
+		    <artifactId>jackson-mapper-asl</artifactId>
+		    <version>1.9.13</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.codehaus.jackson</groupId>
+		    <artifactId>jackson-core-asl</artifactId>
+		    <version>1.9.13</version>
+		</dependency>
 		<!-- ******************************************************** -->
 	</dependencies>
 
