--- a/SellreMarket/pom.xml
+++ b/SellreMarket/pom.xml
@@ -124,7 +124,7 @@
 		</dependency>
 		
 		<!-- ajax 사용 위해 -->
-		<dependency>
+		<!--<dependency>
 		    <groupId>net.sf.json-lib</groupId>
 		    <artifactId>json-lib</artifactId>
 		    <classifier>jdk15</classifier>
@@ -140,7 +140,22 @@
 		    <groupId>org.codehaus.jackson</groupId>
 		    <artifactId>jackson-core-asl</artifactId>
 		    <version>1.9.13</version>
+		</dependency> -->
+		
+		<!-- log4j
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+		 	<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.10.0</version>
+		</dependency>-->
+		
+		<!-- log4j -->
+		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
 		</dependency>
+		
 		<!-- ******************************************************** -->
 	</dependencies>
 
