신상품, 베스트, 레시피, 페이징 화면 출력 to spring boot

--- a/SellreMarket/src/main/resources/application.properties
+++ b/SellreMarket/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.url=jdbc:mysql://192.168.50.47:3306/sellremarket?serverTimezon
 
 spring.datasource.username=root
 spring.datasource.password=qwer1234
+
+datas:
+type: java.util.HashMap
