--- a/SellreMarket/src/main/resources/application.properties
+++ b/SellreMarket/src/main/resources/application.properties
@@ -4,11 +4,8 @@ spring.mvc.view.suffix=.jsp
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.50.47:3306/sellremarket?serverTimezone=Asia/Seoul&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/sellremarket?serverTimezone=Asia/Seoul&autoReconnect=true&useSSL=false
 
 
 spring.datasource.username=root
 spring.datasource.password=qwer1234
-
-datas:
-type: java.util.HashMap
