--- a/SellreMarket/pom.xml
+++ b/SellreMarket/pom.xml
@@ -171,6 +171,17 @@
 		
 		<!-- ******************************************************** -->
 		
+		<!-- Lombok 라이브러리 -->
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+	    <groupId>org.projectlombok</groupId>
+	    <artifactId>lombok</artifactId>
+	    <version>1.18.30</version>
+	    <scope>provided</scope>
+		</dependency>
+		
+		<!-- ******************************************************** -->
+		
 	</dependencies>
 
 	<build>
